--- a/repleetfrontend.client/index.html
+++ b/repleetfrontend.client/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Icon_planet.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repleet - Spaced Repetition for DSA Problems</title>
-  </head>
+    <base href="/" />
+</head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+      
+
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
